--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/crud
 spring.datasource.username= root
-spring.datasource.password= @KLhulkie99
+spring.datasource.password= kienbeo1999
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.format_sql=true
